--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: '**'
 
+env:
+  BASE_REGISTRY: ${{ secrests.BASE_REGISTRY }}
+  REGISTRY: '${{ secrets.BASE_REGISTRY }}/sro'
+
 jobs:
   test:
     runs-on: ubuntu-latest
