--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build CI/CD
+name: Build CI
 
 on:
   push:
@@ -78,21 +78,21 @@ jobs:
       id: build-image
       run: make push-prod
 
-    - name: Deploy dev to cluster
-      uses: kodermax/kubectl-aws-eks@master
-      if: github.ref == 'refs/heads/dev'
-      with:
-        args: rollout restart deployment/frontend -n sro-dev      
+#     - name: Deploy dev to cluster
+#       uses: kodermax/kubectl-aws-eks@master
+#       if: github.ref == 'refs/heads/dev'
+#       with:
+#         args: rollout restart deployment/frontend -n sro-dev      
     
-    - name: Deploy qa to cluster
-      uses: kodermax/kubectl-aws-eks@master
-      if: github.ref == 'refs/heads/qa'
-      with:
-        args: rollout restart deployment/frontend -n sro-qa
+#     - name: Deploy qa to cluster
+#       uses: kodermax/kubectl-aws-eks@master
+#       if: github.ref == 'refs/heads/qa'
+#       with:
+#         args: rollout restart deployment/frontend -n sro-qa
         
     
-    - name: Deploy prod to cluster
-      uses: kodermax/kubectl-aws-eks@master
-      if: github.ref == 'refs/heads/main'
-      with:
-        args: rollout restart deployment/frontend -n sro
+#     - name: Deploy prod to cluster
+#       uses: kodermax/kubectl-aws-eks@master
+#       if: github.ref == 'refs/heads/main'
+#       with:
+#         args: rollout restart deployment/frontend -n sro
