--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^3.1.1",
     "mdb-angular-ui-kit": "^1.6.1",
+    "node": "^18.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
