--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser-dynamic": "~13.2.4",
     "@angular/router": "~13.2.4",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "@improbable-eng/grpc-web": "^0.15.0",
     "chart.js": "^3.1.1",
     "env-cmd": "^10.1.0",
+    "google-protobuf": "^3.21.2",
     "mdb-angular-ui-kit": "file:mdb-angular-ui-kit-2.3.0.tgz",
     "ngx-captcha": "^11.0.0",
     "rxjs": "~7.5.0",
+    "ts-protoc-gen": "^0.15.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
@@ -32,8 +35,9 @@
     "@angular-devkit/build-angular": "~13.2.5",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.4",
+    "@types/google-protobuf": "^3.15.6",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
