--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "chart.js": "^3.1.1",
     "env-cmd": "^10.1.0",
     "google-protobuf": "^3.21.2",
+    "keycloak-angular": "^13.0.0",
+    "keycloak-js": "^21.0.1",
     "mdb-angular-ui-kit": "file:mdb-angular-ui-kit-2.3.0.tgz",
     "ngx-captcha": "^11.0.0",
     "rxjs": "~7.5.0",
