--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
     "@angular/platform-browser": "~13.2.4",
     "@angular/platform-browser-dynamic": "~13.2.4",
     "@angular/router": "~13.2.4",
-    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "@improbable-eng/grpc-web": "^0.15.0",
-    "chart.js": "^3.1.1",
+    "chart.js": "^3.9.1",
     "env-cmd": "^10.1.0",
     "google-protobuf": "^3.21.2",
     "keycloak-angular": "^13.0.0",
     "keycloak-js": "^21.0.1",
     "mdb-angular-ui-kit": "file:mdb-angular-ui-kit-2.3.0.tgz",
     "ngx-captcha": "^11.0.0",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.8.0",
     "ts-protoc-gen": "^0.15.0",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.5.0",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.5",
