--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "mdb-angular-ui-kit": "file:mdb-angular-ui-kit-4.0.0.tgz",
     "ngx-captcha": "^13.0.0",
     "rxjs": "~7.8.0",
-    "ts-protoc-gen": "^0.15.0",
     "tslib": "^2.5.0",
     "zone.js": "^0.12.0"
   },
@@ -49,6 +48,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "ts-protoc-gen": "^0.15.0"
   }
 }
