--- a/angular.json
+++ b/angular.json
@@ -12,7 +12,7 @@
         "@schematics/angular:application": {
           "strict": true
         }
-      }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -28,12 +28,14 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/api"
             ],
             "styles": [
               "src/styles.scss"
             ],
             "scripts": [
+              "node_modules/chart.js/dist/chart.js",
               "node_modules/chart.js/dist/chart.js"
             ],
             "customWebpackConfig": {
